[package]
name = "bbl-usd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {version = "0.24.2", features = ["scalar-math"]}
paste = "1.0.14"

[build-dependencies]
cmake = "0.1.50"
bindgen = "0.69.2"
